[tool.poetry]
name = "basic2dengine"
version = "0.1.0"
description = "A simple 2D game engine."
authors = ["MujyKun <mujy@irenebot.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
